# tasks-tui

./: pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/brainstorms/: 2026-05-12-custom-task-sort-brainstorm.md
docs/plans/: 2026-05-12-feat-custom-task-sort-plan.md
src/gtasks_tui/: app.py  date_utils.py  task_list.py  tasks_api.py  widgets.py
src/gtasks_tui/screens/: config_screens.py  task_screens.py
src/gtasks_tui/styles/: config_screens.tcss  widgets.tcss
src/tasks_tui/: app.py  app.tcss  beads_api.py  date_utils.py  screens.py  sync.py  task_list.py  tasks_api.py  widgets.py
src/tasks_tui/screens/: __init__.py  beads_screens.py  config_screens.py  shared.py  task_screens.py
src/tasks_tui/styles/: base.tcss  beads_screens.tcss  config_screens.tcss  task_screens.tcss  widgets.tcss
tests/: conftest.py  test_app.py  test_sync.py  test_task_list.py  test_tasks_api.py
