[project]
name = "tasks-tui"
version = "0.1.0"
description = "Terminal UI for tasks across Google Tasks and Beads issue trackers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["tasks", "google-tasks", "beads", "tui", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=8.1.1",
]

[project.urls]
Repository = "https://github.com/casperalexanderdamen/tasks-tui"

[project.scripts]
tasks = "tasks_tui.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "textual-dev>=1.8.0",
    "ty>=0.0.0a1",
]
